refactor(CarRepositoryTest): 리스트에 첫번째 요소 꺼낼때 getFirst() 함수 사용